# ETA

./: .gitignore  .gitlab-ci.yml  ETA.spec  ETA_conda_env.yml  ETA_single_thread.py  ETAcore.py  Lifetime-qutag.eta  MANIFEST.in  PARSE_TimeTagFileHeader.ll  README.md  appveyor.yml  asm_sum.c  better_hist2d.eta  build.bat  compare_ss_corre.eta  conda_ETA_env.yml  core.py  dashboard.py  eta.py  eta_runtime.py  inject.py  inlinecalls.py  jit_linker.py  llvm.txt  mainloop.py  multi_processing.py  myfile.txt  parser_header.ll  parser_header.py  py.txt  pyproject.toml  requirements.txt  runtime.py  scheduler.py  server.eta  server_code.py  setup.py  ss_corr.eta  startstop.eta  tensor.py  (+3 more)
.github/workflows/: ci.yml  (+2 more)
compiler/: ast_parser.py  codegen.py  eta_parser.py  eta_vm.py  etacode_parser.py  fakelib.py  graph_parser.py  parser.py  vi_templatejeswlw8e.etainst
cpp/: INFRA_vchn.cpp  PARSE_TimeTagFileHeader.cpp  PARSE_TimeTags.cpp
docs/: Makefile  actions.rst  advanced.rst  conf.py  graph.rst  index.rst  installation.rst  intro.rst  make.bat  python.rst  recipes.rst  workflow.rst
etabackend/: Correlation.eta  Merged.eta  Realtime.eta  __init__.py  __main__.py  backend.py  clip.py  eta.py  eta_clip.py  eta_runtime.py  eta_script.py  jit_linker.py  parser_header.py  recipe.py  task.py  util.py  webinstall.py  ws_broadcast.py
etalang/: ast_parser.py  code_template.py  codegen.py  eta_codegen.py  eta_exp.py  eta_vm.py  etacode_parser.py  graph_parser.py  mainloop.py  startstop.eta  tensor.py
examples/: better_hist2d.eta  bioe.eta  corr_w_fit.eta  drawstartstop.eta  hist2d.eta  ss_corr.eta  startstop.eta
gui/: README.md  appveyor.yml  conda_ETA_env.yml  package.json  startbackend.bat  upgradebackend.bat
legacy/: OpenSPC.py
ll/: INFRA_vchn.ll  PARSE_TimeTagFileHeader.ll  PARSE_TimeTags.ll
refernces/: ETA.py  PARSE_TimeTagFileHeader.c  PARSE_TimeTagFileHeader.cpp  dashboard.py  fail.html  pyeta.py  test_oldformat.eta  vectormaths.c
tests/: test_eta_startup.py  test_eta_timetag_logic.py
(+152 files in other folders)
